# spin-deps-plugin

./: .gitignore  Cargo.toml  LICENSE  MAINTAINERS.md  Makefile  README.md  deps.json  spin-pluginify.toml
.github/workflows/: release.yaml
example/: .gitignore  Cargo.toml  README.md  spin.toml
example/src/: lib.rs
src/: main.rs
src/commands/: add.rs  bindings.rs  gen.txt  mod.rs  publish.rs
src/commands/add/: http.rs  local.rs  registry.rs
src/common/: constants.rs  interact.rs  manifest.rs  mod.rs  paths.rs  wit.rs
src/language/: rust.rs
