[package]
name = "spin-deps"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
clap = { version = "4.5.17", features = ["derive"] }
dialoguer = "0.11.0"
reqwest = "0.12.7"
sha2 = "0.10.8"
spin-manifest = { git = "https://github.com/fermyon/spin" }
spin-serde = { git = "https://github.com/fermyon/spin" }
spin-loader = { git = "https://github.com/fermyon/spin" }
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
toml_edit = "0.22.21"
url = "2.5.2"
wasmparser = { git = "https://github.com/bytecodealliance/wasm-tools" }
wit-component = { git = "https://github.com/bytecodealliance/wasm-tools" }
wit-parser = { git = "https://github.com/bytecodealliance/wasm-tools" }
futures = "0.3.30"
semver = "1.0.23"
wit-bindgen-rust = { git = "https://github.com/fibonacci1729/wit-bindgen", branch = "deps" }
wit-bindgen-core = { git = "https://github.com/fibonacci1729/wit-bindgen", branch = "deps" }
wasm-pkg-common = "0.5.1"
wasm-pkg-client = "0.5.1"

[target.'cfg(target_os = "linux")'.dependencies]
# This needs to be an explicit dependency to enable
# '--features openssl/vendored', which is used for Linux releases.
openssl = { version = "0.10" }
