[package]
name = "spin-deps"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.17", features = ["derive"] }
dialoguer = "0.11.0"
reqwest = "0.12.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.8"
spin-manifest = { git = "https://github.com/fermyon/spin" }
spin-serde = { git = "https://github.com/fermyon/spin" }
spin-loader = { git = "https://github.com/fermyon/spin" }
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
toml_edit = "0.22.21"
url = "2.5.2"
wasmparser = "0.219.1"
wit-component = "0.219.1"
wit-parser = "0.219.1"
futures = "0.3.30"
semver = "1.0.23"
wit-bindgen-rust = "0.34.0"
wit-bindgen-core = "0.34.0"
wasm-pkg-common = "0.5.1"
wasm-pkg-client = "0.5.1"
js-component-bindgen-component = { git = "https://github.com/bytecodealliance/jco" }
js-component-bindgen = { git = "https://github.com/bytecodealliance/jco" }

[target.'cfg(target_os = "linux")'.dependencies]
# This needs to be an explicit dependency to enable
# '--features openssl/vendored', which is used for Linux releases.
openssl = { version = "0.10" }
