[package]
name = "spin-deps"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
clap = { version = "4.5.17", features = ["derive"] }
dialoguer = "0.11.0"
reqwest = "0.12.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.8"
spin-common = { git = "https://github.com/fermyon/spin", tag = "v3.0.0" }
spin-manifest = { git = "https://github.com/fermyon/spin", tag = "v3.0.0" }
spin-serde = { git = "https://github.com/fermyon/spin", tag = "v3.0.0" }
spin-loader = { git = "https://github.com/fermyon/spin", tag = "v3.0.0" }
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
toml_edit = "0.22.21"
url = "2.5.2"
wasmparser = "0.227.1"
wit-component = "0.227.1"
wit-parser = "0.227.1"
futures = "0.3.30"
semver = "1.0.25"
wit-bindgen-rust = "0.41.0"
wit-bindgen-core = "0.41.0"
wasm-pkg-common = "0.5.1"
wasm-pkg-client = "0.5.1"
js-component-bindgen = { git = "https://github.com/bytecodealliance/jco", rev = "48c1a3c91a9c71d35aedc9572e180ce67ca3a4f5" }
convert_case = "0.8.0"

[target.'cfg(target_os = "linux")'.dependencies]
# This needs to be an explicit dependency to enable
# '--features openssl/vendored', which is used for Linux releases.
openssl = { version = "0.10" }
